# Arch-Meta-Package-Harmonizer

./: .SRCINFO  Cargo.toml  LICENSE  README.md  install.sh
src/: main.rs
src/analyzer/: mod.rs
src/cleanup/: mod.rs
src/pacman/: mod.rs
src/report/: mod.rs
src/scan/: mod.rs
src/stats/: mod.rs
src/storage/: mod.rs
